--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,9 @@ install:
 build_script:
     - go get github.com/akavel/rsrc
     - rsrc -ico=tools/package/icon.ico -arch=amd64
-    - go get && go build -ldflags="-H windowsgui"
+    - go get
+    - go build
+    # - go build -ldflags="-H windowsgui"
 
 after_build:
     # - iscc /Qp /O".\" /Fopenwar-%APPVEYOR_BUILD_VERSION%-win64 tools\package\setup.iss
