--- a/tools/package/OpenWar.app/Contents/Info.plist
+++ b/tools/package/OpenWar.app/Contents/Info.plist
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CFBundleDevelopmentRegion</key>
+    <string>English</string>
     <key>CFBundleExecutable</key>
     <string>start.sh</string>
+    <key>CFBundleGetInfoString</key>
+    <string>0.0.1, Copyright © 2016 Andreas T Jonsson</string>
+    <key>CFBundleIconFile</key>
+    <string>icon.icns</string>
     <key>CFBundleIdentifier</key>
     <string>io.openwar.OpenWar</string>
     <key>CFBundleInfoDictionaryVersion</key>
@@ -12,5 +18,14 @@
     <string>OpenWar</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
+    <key>CFBundleShortVersionString</key>
+    <string>0.0</string>
+    <!-- <key>CFBundleSignature</key><string>????</string> -->
+    <key>CFBundleVersion</key>
+    <string>0.0.1</string>
+    <key>NSHumanReadableCopyright</key>
+    <string>Copyright © 2016 Andreas T Jonsson, GNU General Public License.</string>
+    <key>LSMinimumSystemVersion</key>
+    <string>10.4</string>
 </dict>
 </plist>
