--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ env:
 install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install dylibbundler; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl; fi
+
     - export SDL_PREFIX=/usr/local && ./tools/sdl_from_source.sh
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get golang.org/x/mobile/cmd/gomobile && go get github.com/gopherjs/gopherjs; fi
