--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get golang.org/x/mobile/cmd/gomobile && go get github.com/gopherjs/gopherjs; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then gomobile init; fi
 
-    - go get
+    - go get -v
 
 script:
     - go build
