--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ notifications:
         on_success: never
         on_failure: always
 
-branches:
-    only:
-        - master
+#branches:
+#    only:
+#        - master
 
 env:
     - OPENWAR_VERSION=0.0.1
