--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,6 @@ notifications:
         on_success: never
         on_failure: always
 
-#branches:
-#    only:
-#        - master
-
 env:
     - OPENWAR_VERSION=0.0.1
 
@@ -35,18 +31,12 @@ script:
     - go build
 
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/build_app.sh; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/dropbox/dropbox_uploader.sh upload OpenWar.zip Public; fi
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/package/build_deb.sh; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb Public/openwar_$OPENWAR_VERSION.deb; fi
+    # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cp ./tools/package/AndroidManifest.xml ./ && gomobile build -target=android -tags=mobile; fi
+    # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then $GOPATH/bin/gopherjs build openwar.go; fi
 
-    #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cp ./tools/package/AndroidManifest.xml ./ && gomobile build -target=android -tags=mobile; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar.apk Public; fi
-
-    #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then $GOPATH/bin/gopherjs build openwar.go; fi
-    #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar.js Public && ./tools/dropbox/dropbox_uploader.sh upload openwar.js.map Public; fi
-
-before_deploy:
+#before_deploy:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; export FINAL_PACKAGE=openwar_$OPENWAR_VERSION.deb; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; export FINAL_PACKAGE=OpenWar.zip; fi
 
