--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ notifications:
 
 env:
     - OPENWAR_VERSION=0.0.1
+    - NDK_VERSION=r10e
 
 install:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install dylibbundler; fi
@@ -26,6 +27,14 @@ install:
     # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get github.com/gopherjs/gopherjs; fi
 
     - go get -v
+
+    # Install NDK for Android builds.
+    - curl -L http://dl.google.com/android/ndk/android-ndk-${NDK_VERSION}-linux-x86_64.bin -O
+    - chmod u+x android-ndk-${NDK_VERSION}-linux-x86_64.bin
+    - ./android-ndk-${NDK_VERSION}-linux-x86_64.bin > /dev/null
+    - rm android-ndk-${NDK_VERSION}-linux-x86_64.bin
+    - export ANDROID_NDK_HOME=`pwd`/android-ndk-${NDK_VERSION}
+    - export PATH=${ANDROID_NDK_HOME}:${PATH}
 
 script:
     - go build
