--- a/.travis.yml
+++ b/.travis.yml
@@ -16,24 +16,18 @@ notifications:
 install:
     - export NDK_VERSION=r10e
     - export OPENWAR_VERSION=0.0.1
+    - export SDL_PREFIX=/usr/local
 
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install dylibbundler; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl; fi
 
-    - export SDL_PREFIX=/usr/local && ./tools/sdl_from_source.sh
+    - ./tools/sdl_from_source.sh
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/install_ndk.sh; fi
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get golang.org/x/mobile/cmd/gomobile && gomobile init; fi
     # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get github.com/gopherjs/gopherjs; fi
 
     - go get -v
-
-    # Install NDK for Android builds.
-    - curl -L http://dl.google.com/android/ndk/android-ndk-${NDK_VERSION}-linux-x86_64.bin -O
-    - chmod u+x android-ndk-${NDK_VERSION}-linux-x86_64.bin
-    - ./android-ndk-${NDK_VERSION}-linux-x86_64.bin > /dev/null
-    - rm android-ndk-${NDK_VERSION}-linux-x86_64.bin
-    - export ANDROID_NDK_HOME=`pwd`/android-ndk-${NDK_VERSION}
-    - export PATH=${ANDROID_NDK_HOME}:${PATH}
 
 script:
     - go build
