--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,8 @@ install:
 
     - ./tools/sdl_from_source.sh
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/install_ndk.sh; fi
-    
-    - ls $HOME/android-ndk-r10e
 
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get golang.org/x/mobile/cmd/gomobile && gomobile init -ndk $HOME/android-ndk-r10e; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get golang.org/x/mobile/cmd/gomobile && gomobile init -ndk $ANDROID_NDK_HOME; fi
     # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get github.com/gopherjs/gopherjs; fi
 
     - go get -v
