--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl; fi
 
     - ./tools/sdl_from_source.sh
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/install_ndk.sh; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then source ./tools/install_ndk.sh; fi
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get golang.org/x/mobile/cmd/gomobile && gomobile init -ndk $ANDROID_NDK_HOME; fi
     # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get github.com/gopherjs/gopherjs; fi
