--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,8 @@ script:
 
 before_deploy:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export FINAL_PACKAGE=OpenWar.zip; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FINAL_PACKAGE=$(ls openwar_*.deb openwar.apk | tr '\n' ' '); fi
+    # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FINAL_PACKAGE=$(ls openwar_*.deb openwar.apk | tr '\n' ' '); fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FINAL_PACKAGE=openwar*.*; fi
     - echo "deploying $FINAL_PACKAGE to GitHub releases"
 
 deploy:
