--- a/.travis.yml
+++ b/.travis.yml
@@ -35,14 +35,12 @@ script:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/build_app.sh; fi
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/package/build_deb.sh; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cp ./tools/package/AndroidManifest.xml ./ && gomobile build -target=android -tags=mobile; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cp ./tools/package/AndroidManifest.xml ./ && gomobile build -o openwar_$OPENWAR_VERSION.apk -target=android -tags=mobile; fi
     # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then $GOPATH/bin/gopherjs build openwar.go; fi
 
 before_deploy:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export FINAL_PACKAGE=OpenWar.zip; fi
-    # - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FINAL_PACKAGE=$(ls openwar_*.deb openwar.apk | tr '\n' ' '); fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FINAL_PACKAGE=openwar*.*; fi
-    - echo "deploying $FINAL_PACKAGE to GitHub releases"
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export FINAL_PACKAGE=openwar_$OPENWAR_VERSION.*; fi
 
 deploy:
     provider: releases
