Fixed snap path.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ _testmain.go
 
 .DS_Store
 
+prime/**
+stage/**
 img/**
 archive/**
 tools/package/dependencies/**
@@ -34,3 +36,5 @@ openwar
 *.WAR
 *.syso
 *.apk
+
+*.snap
